[gd_scene load_steps=11 format=3 uid="uid://xnw7qsp66log"]

[ext_resource type="Script" path="res://TurnBased/battle_manager.gd" id="1_3fk0c"]
[ext_resource type="Script" path="res://TurnBased/player_battle_organizer.gd" id="2_tnov0"]
[ext_resource type="PackedScene" uid="uid://cmnacos40qlc5" path="res://TurnBased/player_battler.tscn" id="2_wnruc"]
[ext_resource type="PackedScene" uid="uid://jyq4wji2feey" path="res://TurnBased/enemy_battler.tscn" id="3_auti2"]
[ext_resource type="Script" path="res://TurnBased/enemy_battle_organiser.gd" id="3_cijeu"]
[ext_resource type="Script" path="res://TurnBased/turn_action_buttons.gd" id="6_c45y4"]
[ext_resource type="Script" path="res://OverWorld/Player/InventorySystem/Cursor/item_selected.gd" id="6_sw564"]
[ext_resource type="PackedScene" uid="uid://c50jgnbvmwy70" path="res://OverWorld/Player/InventorySystem/Cursor/menu_cursor.tscn" id="7_5rado"]
[ext_resource type="Theme" uid="uid://d4bp6srhi37i8" path="res://Assets/text_theme.tres" id="7_esjta"]
[ext_resource type="Script" path="res://TurnBased/enemy_button.gd" id="8_ebvi6"]

[node name="TurnBasedCombatScene" type="Node"]
script = ExtResource("1_3fk0c")

[node name="BackGround" type="Sprite2D" parent="."]

[node name="PlayerBattleOrganizer" type="Node2D" parent="."]
script = ExtResource("2_tnov0")

[node name="PlayerBattler" parent="PlayerBattleOrganizer" instance=ExtResource("2_wnruc")]
position = Vector2(39, 132)

[node name="PlayerBattler2" parent="PlayerBattleOrganizer" instance=ExtResource("2_wnruc")]
position = Vector2(108, 131)

[node name="PlayerBattler3" parent="PlayerBattleOrganizer" instance=ExtResource("2_wnruc")]
position = Vector2(156, 129)

[node name="EnemyBattleOrganiser" type="Node2D" parent="."]
script = ExtResource("3_cijeu")

[node name="EnemyBattler" parent="EnemyBattleOrganiser" node_paths=PackedStringArray("own_button") instance=ExtResource("3_auti2")]
position = Vector2(96, 26)
own_button = NodePath("../../CanvasLayer/MobSelectMenu/MobSelect/Enemy1")

[node name="EnemyBattler2" parent="EnemyBattleOrganiser" node_paths=PackedStringArray("own_button") instance=ExtResource("3_auti2")]
position = Vector2(58, 25)
own_button = NodePath("../../CanvasLayer/MobSelectMenu/MobSelect/Enemy2")

[node name="EnemyBattler3" parent="EnemyBattleOrganiser" node_paths=PackedStringArray("own_button") instance=ExtResource("3_auti2")]
position = Vector2(44, 51)
own_button = NodePath("../../CanvasLayer/MobSelectMenu/MobSelect/Enemy3")

[node name="EnemyBattler4" parent="EnemyBattleOrganiser" node_paths=PackedStringArray("own_button") instance=ExtResource("3_auti2")]
position = Vector2(87, 58)
own_button = NodePath("../../CanvasLayer/MobSelectMenu/MobSelect/Enemy4")

[node name="EnemyBattler5" parent="EnemyBattleOrganiser" node_paths=PackedStringArray("own_button") instance=ExtResource("3_auti2")]
position = Vector2(123, 67)
own_button = NodePath("../../CanvasLayer/MobSelectMenu/MobSelect/Enemy5")

[node name="EnemyBattler6" parent="EnemyBattleOrganiser" node_paths=PackedStringArray("own_button") instance=ExtResource("3_auti2")]
position = Vector2(163, 61)
own_button = NodePath("../../CanvasLayer/MobSelectMenu/MobSelect/Enemy6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TurnActionButtons" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
color = Color(0, 0, 0, 1)
script = ExtResource("6_c45y4")

[node name="TurnActions" type="GridContainer" parent="CanvasLayer/TurnActionButtons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AttackButton" type="Button" parent="CanvasLayer/TurnActionButtons/TurnActions"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("7_esjta")
text = "Attack"
script = ExtResource("6_sw564")

[node name="SkipTurnButton" type="Button" parent="CanvasLayer/TurnActionButtons/TurnActions"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("7_esjta")
text = "Skip Turn"
script = ExtResource("6_sw564")

[node name="UseItemButton" type="Button" parent="CanvasLayer/TurnActionButtons/TurnActions"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("7_esjta")
text = "Use Item"
script = ExtResource("6_sw564")

[node name="TurnCursor" parent="CanvasLayer/TurnActionButtons" instance=ExtResource("7_5rado")]
layout_mode = 0
offset_top = -21.0
offset_bottom = -11.0
mouse_filter = 2
menu_parent_path = NodePath("../TurnActions")

[node name="MobSelectMenu" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="MobSelect" type="VBoxContainer" parent="CanvasLayer/MobSelectMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Enemy1" type="Button" parent="CanvasLayer/MobSelectMenu/MobSelect" node_paths=PackedStringArray("own_enemy")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("7_esjta")
script = ExtResource("8_ebvi6")
own_enemy = NodePath("../../../../EnemyBattleOrganiser/EnemyBattler")

[node name="Enemy2" type="Button" parent="CanvasLayer/MobSelectMenu/MobSelect" node_paths=PackedStringArray("own_enemy")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("7_esjta")
script = ExtResource("8_ebvi6")
own_enemy = NodePath("../../../../EnemyBattleOrganiser/EnemyBattler2")

[node name="Enemy3" type="Button" parent="CanvasLayer/MobSelectMenu/MobSelect" node_paths=PackedStringArray("own_enemy")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("7_esjta")
script = ExtResource("8_ebvi6")
own_enemy = NodePath("../../../../EnemyBattleOrganiser/EnemyBattler3")

[node name="Enemy4" type="Button" parent="CanvasLayer/MobSelectMenu/MobSelect" node_paths=PackedStringArray("own_enemy")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("7_esjta")
script = ExtResource("8_ebvi6")
own_enemy = NodePath("../../../../EnemyBattleOrganiser/EnemyBattler4")

[node name="Enemy5" type="Button" parent="CanvasLayer/MobSelectMenu/MobSelect" node_paths=PackedStringArray("own_enemy")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("7_esjta")
script = ExtResource("8_ebvi6")
own_enemy = NodePath("../../../../EnemyBattleOrganiser/EnemyBattler5")

[node name="Enemy6" type="Button" parent="CanvasLayer/MobSelectMenu/MobSelect" node_paths=PackedStringArray("own_enemy")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("7_esjta")
script = ExtResource("8_ebvi6")
own_enemy = NodePath("../../../../EnemyBattleOrganiser/EnemyBattler6")

[node name="MobCursor" parent="CanvasLayer/MobSelectMenu" instance=ExtResource("7_5rado")]
visible = false
layout_mode = 0
mouse_filter = 2
menu_parent_path = NodePath("../MobSelect")

[node name="BattleEndPanel" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="BattleEndLabel" type="Label" parent="CanvasLayer/BattleEndPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "AAA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FlowContainer" type="FlowContainer" parent="CanvasLayer"]
offset_top = 226.0
offset_right = 126.0
offset_bottom = 226.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="VFlowContainer" type="VFlowContainer" parent="CanvasLayer/FlowContainer"]
layout_mode = 2
mouse_filter = 2
